--- a/calculator.ipynb
+++ b/calculator.ipynb
@@ -9,9 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               MORTGAGE CALCULATOR                \n",
+      " \n",
+      " \n",
+      "For a 30.0-year mortgage loan of $100000.0 at an annual interest rate of 0.075, you pay $699.21 monthly\n",
+      "Total Interest to be Paid for 30.0 years = $151,717.22\n",
+      " \n",
+      "-------------------------------------------------------\n",
+      "Total Amount to be paid for 30.0 years = $251,717.22\n",
+      "-------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Print \"MORTGAGE CALCULATOR\" to screen using f-string\n",
     "print(f'{\"mortgage calculator\".upper().center(50,\" \")}\\n{\" \"}')\n",
